--- a/css/styles.css
+++ b/css/styles.css
@@ -143,11 +143,18 @@ body {
     letter-spacing: 0.02em;
     color: #757575;
 }
+
 .contact-link:hover,
 .contact-link:focus {
     color: var(--accent-color);
 }
+
+.contact-link-icon {
+    margin-right: 10px;
+}
+
 /* ==============/HEADER============== */
+
 /* ==============HERO============== */
 .main-title {
     font-weight: 900;   
@@ -197,6 +204,19 @@ body {
 /* ==============/HERO============== */
 
 /* =============OUR MISSION============== */
+.rectangle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 270px;
+    height: 120px;
+    left: 215px;
+    top: 774px;
+    background: #F5F4FA;
+    border-radius: 4px;
+    margin-bottom: 30px;
+}
+
 .list-description {
     display: flex;
     justify-content: space-between;
@@ -255,6 +275,23 @@ body {
 /* =============/WHAT WE DO============== */
 
 /* =============OUR TEAM============== */
+.soc-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+ 
+
+.soc-list-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+}
+
 .our-team {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -272,6 +309,8 @@ body {
     flex-basis: calc((100% - 120px) / 4);
     margin-top: 30px;
     margin-left: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .employees-name {
@@ -290,13 +329,15 @@ body {
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-
     color: #757575;
+    margin-bottom: 16px;
 }
 
 .name-wrapper {
     padding-top: 30px;
     padding-bottom: 30px;
+    padding-left: 32px;
+    padding-right: 32px;
 }
 
 .employees-name {
